feat(server): add all authorization functionalities for client and applicant
