# apps/server/src/routes/candidate.routes.ts
@@ -1,19 +1,0 @@
-import express from 'express';
-import validator from '../middleware/validator';
-import { RegisterCandidateSchema } from '../schemas/user.schema';
-import {
-    GetCurrentUserHandler,
-    CandidateRegisterHandler,
-} from '../controllers/candidate.controllers';
-import { verifyJwt } from '../middleware/auth.middleware';
-
-const router = express.Router();
-
-router.post(
-    '/register',
-    validator(RegisterCandidateSchema),
-    CandidateRegisterHandler,
-);
-router.get('/current-user', verifyJwt, GetCurrentUserHandler);
-
-export default router;
