# apps/server/src/routes/client.routes.ts
@@ -1,0 +1,8 @@
+import express from 'express';
+import { clientRegisterHandler } from '../controllers/client.controllers';
+
+const router = express.Router();
+
+router.post('/register', clientRegisterHandler);
+
+export default router;
